abiout to launch

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Accounts" tabIcon="contacts"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Weekend Sign In List" tabIcon="ios-clipboard"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Week Day Sign In List" tabIcon="ios-clipboard"></ion-tab>
 </ion-tabs>
