great great great great

--- a/src/pages/sign-out/sign-out.html
+++ b/src/pages/sign-out/sign-out.html
@@ -37,5 +37,6 @@
 			</td>
 		</tr>
 	</table>
-	<ion-label>Number of Students Signed In: {{ count }}</ion-label>
+	<ion-label>Number of Students Signed In for Lunch: {{ lunchCount }}</ion-label>
+	<ion-label>Number of Students Signed In for Dinner: {{ dinnerCount }}</ion-label>
 </ion-content>
