--- a/src/pages/sign-out/sign-out.html
+++ b/src/pages/sign-out/sign-out.html
@@ -1,6 +1,6 @@
 <ion-header>
 	<ion-navbar>
-		<ion-title>Current Sign In List</ion-title>
+		<ion-title>Today's Sign In List</ion-title>
 		<ion-buttons end>
 			<button ion-button icon-only (click)="refresh()">
 				<ion-icon name="refresh"></ion-icon>
